--- a/assets/Multi-class-classification/Hand_Digits_Classification.ipynb
+++ b/assets/Multi-class-classification/Hand_Digits_Classification.ipynb
@@ -68,7 +68,7 @@
     "\n",
     "In Stochastic Gradient Descent, you use only 1 training example before updating the gradients. When the training set is large, SGD can be faster. But the parameters will \"oscillate\" toward the minimum rather than converge smoothly. Here's what that looks like: \n",
     "\n",
-    "<img src=\"images/kiank_sgd.png\" style=\"width:750px;height:250px;\">\n",
+    "<img src=\"./images/kiank_sgd.png\" style=\"width:750px;height:250px;\">\n",
     "<caption><center> <u> <font color='purple'> <b>Figure 1</b> </u><font color='purple'>  : <b>SGD vs GD</b><br> \"+\" denotes a minimum of the cost. SGD leads to many oscillations to reach convergence, but each step is a lot faster to compute for SGD than it is for GD, as it uses only one training example (vs. the whole batch for GD). </center></caption>\n",
     "\n",
     "Implementing SGD requires 3 for-loops in total:\n",
