--- a/assets/Multi-class-classification/Hand_Digits_Classification.ipynb
+++ b/assets/Multi-class-classification/Hand_Digits_Classification.ipynb
@@ -76,7 +76,7 @@
     "\n",
     "In Stochastic Gradient Descent, you use only 1 training example before updating the gradients. When the training set is large, SGD can be faster. But the parameters will \"oscillate\" toward the minimum rather than converge smoothly. Here's what that looks like: \n",
     "\n",
-    "<img src=\"images/kiank_sgd.png\" style=\"width:750px;height:250px;\">\n",
+    "<img src=\"../images/kiank_sgd.png\" style=\"width:750px;height:250px;\">\n",
     "\n",
     "<caption>\n",
     "    <center> \n",
@@ -121,18 +121,18 @@
     "    cost_avg = cost_total / m\n",
     "```\n",
     "\n",
-    "<img src=\"images/kiank_minibatch.png\" style=\"width:750px;height:250px;\">\n",
+    "<img src=\"../images/kiank_minibatch.png\" style=\"width:750px;height:250px;\">\n",
     "    \n",
     "<caption><center> <u> <font color='purple'> <b>Figure 2</b> </u>: <font color='purple'>  <b>SGD vs Mini-Batch GD</b><br> \"+\" denotes a minimum of the cost. Using mini-batches in your optimization algorithm often leads to faster optimization. </center></caption>\n",
     "\n",
     "There are two steps:\n",
     "- **Shuffle**: Create a shuffled version of the training set (X, Y) as shown below. Each column of X and Y represents a training example. Note that the random shuffling is done synchronously between X and Y. Such that after the shuffling the $i^{th}$ column of X is the example corresponding to the $i^{th}$ label in Y. The shuffling step ensures that examples will be split randomly into different mini-batches. \n",
     "\n",
-    "<img src=\"images/kiank_shuffle.png\" style=\"width:550px;height:300px;\">\n",
+    "<img src=\"../images/kiank_shuffle.png\" style=\"width:550px;height:300px;\">\n",
     "\n",
     "- **Partition**: Partition the shuffled (X, Y) into mini-batches of size `mini_batch_size` (here 64). Note that the number of training examples is not always divisible by `mini_batch_size`. The last mini batch might be smaller. When the final mini-batch is smaller than the full `mini_batch_size`, it will look like this: \n",
     "\n",
-    "<img src=\"images/kiank_partition.png\" style=\"width:550px;height:300px;\">\n",
+    "<img src=\"../images/kiank_partition.png\" style=\"width:550px;height:300px;\">\n",
     "\n",
     "- Shuffling and Partitioning are the two steps required to build mini-batches\n",
     "- Powers of two are often chosen to be the mini-batch size, e.g., 16, 32, 64, 128.\n",
@@ -3978,7 +3978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -4006,7 +4006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -4033,7 +4033,7 @@
     "plt.ylabel('Test Accuracy')\n",
     "plt.xlabel('iterations (per fives)')\n",
     "plt.title(\"Learning rate =\" + str(0.0001))\n",
-    "plt.savefig('images/MBGD_tensorflow_accuracy_today.jpg')\n",
+    "plt.savefig('MBGD_tensorflow_accuracy_today.jpg')\n",
     "plt.show()\n"
    ]
   },
