--- a/assets/Multi-class-classification/Hand_Digits_Classification.ipynb
+++ b/assets/Multi-class-classification/Hand_Digits_Classification.ipynb
@@ -76,7 +76,7 @@
     "\n",
     "In Stochastic Gradient Descent, you use only 1 training example before updating the gradients. When the training set is large, SGD can be faster. But the parameters will \"oscillate\" toward the minimum rather than converge smoothly. Here's what that looks like: \n",
     "\n",
-    "<img src=\"../images/kiank_sgd.png\" style=\"width:750px;height:250px;\">\n",
+    "<img src=\"./images/kiank_sgd.png\" style=\"width:750px;height:250px;\">\n",
     "\n",
     "<caption>\n",
     "    <center> \n",
@@ -121,18 +121,18 @@
     "    cost_avg = cost_total / m\n",
     "```\n",
     "\n",
-    "<img src=\"../images/kiank_minibatch.png\" style=\"width:750px;height:250px;\">\n",
+    "<img src=\"./images/kiank_minibatch.png\" style=\"width:750px;height:250px;\">\n",
     "    \n",
     "<caption><center> <u> <font color='purple'> <b>Figure 2</b> </u>: <font color='purple'>  <b>SGD vs Mini-Batch GD</b><br> \"+\" denotes a minimum of the cost. Using mini-batches in your optimization algorithm often leads to faster optimization. </center></caption>\n",
     "\n",
     "There are two steps:\n",
     "- **Shuffle**: Create a shuffled version of the training set (X, Y) as shown below. Each column of X and Y represents a training example. Note that the random shuffling is done synchronously between X and Y. Such that after the shuffling the $i^{th}$ column of X is the example corresponding to the $i^{th}$ label in Y. The shuffling step ensures that examples will be split randomly into different mini-batches. \n",
     "\n",
-    "<img src=\"../images/kiank_shuffle.png\" style=\"width:550px;height:300px;\">\n",
+    "<img src=\"./images/kiank_shuffle.png\" style=\"width:550px;height:300px;\">\n",
     "\n",
     "- **Partition**: Partition the shuffled (X, Y) into mini-batches of size `mini_batch_size` (here 64). Note that the number of training examples is not always divisible by `mini_batch_size`. The last mini batch might be smaller. When the final mini-batch is smaller than the full `mini_batch_size`, it will look like this: \n",
     "\n",
-    "<img src=\"../images/kiank_partition.png\" style=\"width:550px;height:300px;\">\n",
+    "<img src=\"./images/kiank_partition.png\" style=\"width:550px;height:300px;\">\n",
     "\n",
     "- Shuffling and Partitioning are the two steps required to build mini-batches\n",
     "- Powers of two are often chosen to be the mini-batch size, e.g., 16, 32, 64, 128.\n",
@@ -149,7 +149,7 @@
     "\n",
     "Momentum takes into account the past gradients to smooth out the update. The 'direction' of the previous gradients is stored in the variable $v$. Formally, this will be the exponentially weighted average of the gradient on previous steps. You can also think of $v$ as the \"velocity\" of a ball rolling downhill, building up speed (and momentum) according to the direction of the gradient/slope of the hill. \n",
     "\n",
-    "<img src=\"images/opt_momentum.png\" style=\"width:400px;height:250px;\">\n",
+    "<img src=\"./images/opt_momentum.png\" style=\"width:400px;height:250px;\">\n",
     "<caption><center> <u><font color='purple'><b>Figure 3</b> </u><font color='purple'>: The red arrows show the direction taken by one step of mini-batch gradient descent with momentum. The blue points show the direction of the gradient (with respect to the current mini-batch) on each step. Rather than just following the gradient, the gradient is allowed to influence $v$ and then take a step in the direction of $v$.<br> <font color='black'> </center>\n",
     "    \n",
     "The velocity, $v$, is a python dictionary that needs to be initialized with arrays of zeros. Its keys are the same as those in the `grads` dictionary, that is:\n",
