--- a/assets/Multi-class-classification/Hand_Digits_Classification.ipynb
+++ b/assets/Multi-class-classification/Hand_Digits_Classification.ipynb
@@ -76,7 +76,7 @@
     "\n",
     "In Stochastic Gradient Descent, you use only 1 training example before updating the gradients. When the training set is large, SGD can be faster. But the parameters will \"oscillate\" toward the minimum rather than converge smoothly. Here's what that looks like: \n",
     "\n",
-    "<img src=\"./images/kiank_sgd.png\" style=\"width:750px;height:250px;\">\n",
+    "<img src=\"/assets/Multi-class-classification/Images/kiank_sgd.png\" style=\"width:750px;height:250px;\">\n",
     "\n",
     "<caption>\n",
     "    <center> \n",
